--- a/style.css
+++ b/style.css
@@ -8,4 +8,28 @@
 }
 body {
     font-family: "Poppins", serif;
+    font-size: 16px;
+    color: #3A3A3A;
+}
+.container {
+    width: 1200px;
+    margin: 20px auto;
+}
+.header_section {
+    display: flex;
+    justify-content: space-between;
+}
+.brand_name {
+    font-size: 24px;
+    font-weight: bold;
+}
+.nav_lists {
+    list-style-type: none;
+    display: flex;
+    gap: 1.5rem;
+}
+
+.nav_lists li a {
+    text-decoration: none;
+    color: black;
 }
