--- a/style.css
+++ b/style.css
@@ -125,3 +125,18 @@ ul {
     font-weight: bold;
     text-align: end;
 }
+/* Feature Section */
+.feature {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 5rem;
+}
+.feature_title {
+    font-size: 38px;
+    font-weight: bold;
+}
+.feature_description {
+    font-weight: bold;
+    margin-bottom: 15px;
+}
